--- a/LifeShare/LifeShare.csproj
+++ b/LifeShare/LifeShare.csproj
@@ -12,4 +12,4 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
-</Project>
+</Projec>
