--- a/LifeShare/LifeShare.csproj
+++ b/LifeShare/LifeShare.csproj
@@ -13,3 +13,5 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 </Projec>
+
+//teste
