Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_rafaelfiap.yml
+++ b/.github/workflows/main_rafaelfiap.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -27,7 +27,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -36,7 +36,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
@@ -54,9 +54,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4F245C01ACB74C228448B47C61013E38 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0097DE918630426EA12E9E2CBB1B901B }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6C4B4B75082A4C16B3EB01BCCC9D5E71 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BA760871802544679D20AB626D6A462D }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B5923420119A48AEB85B26DECEBAA493 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_69D792B4938949C1AF901CA3DF4D889F }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
